// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calc sectors for 3 level cmkd > result is equal to snapshot 1`] = `
[
  {
    "object": {
      "fontStyle": "normal",
      "id": 97,
      "isLabel": true,
      "numText": "1",
      "score": 1,
      "typeText": "u",
    },
    "sEnd": 49.9999,
    "sLevel": 2,
    "sStart": 0,
    "shortname": "u1",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 97,
      "isLabel": true,
      "numText": "1",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 129.9998,
    "sLevel": 2,
    "sStart": 49.9999,
    "shortname": "u1",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 97,
      "isLabel": true,
      "numText": "1",
      "score": -1,
      "typeText": "u",
    },
    "sEnd": 199.9997,
    "sLevel": 2,
    "sStart": 129.9998,
    "shortname": "u1",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 97,
      "isLabel": true,
      "numText": "1",
      "score": 0.2,
      "typeText": "u",
    },
    "sEnd": 259.9996,
    "sLevel": 2,
    "sStart": 199.9997,
    "shortname": "u1",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 97,
      "isLabel": true,
      "numText": "1",
      "score": -0.2,
      "typeText": "u",
    },
    "sEnd": 319.9995,
    "sLevel": 2,
    "sStart": 259.9996,
    "shortname": "u1",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 97,
      "isLabel": true,
      "numText": "1",
      "score": 1,
      "typeText": "u",
    },
    "sEnd": 359.99940000000004,
    "sLevel": 2,
    "sStart": 319.9995,
    "shortname": "u1",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 29.9999,
    "sLevel": 1,
    "sStart": 0,
    "shortname": "u2",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 49.99979999999999,
    "sLevel": 1,
    "sStart": 29.9999,
    "shortname": "u2",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 89.99969999999999,
    "sLevel": 1,
    "sStart": 49.99979999999999,
    "shortname": "u2",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 129.9996,
    "sLevel": 1,
    "sStart": 89.99969999999999,
    "shortname": "u2",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 179.99949999999998,
    "sLevel": 1,
    "sStart": 129.9996,
    "shortname": "u2",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 199.99939999999998,
    "sLevel": 1,
    "sStart": 179.99949999999998,
    "shortname": "u2",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 239.99929999999998,
    "sLevel": 1,
    "sStart": 199.99939999999998,
    "shortname": "u2",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 259.9992,
    "sLevel": 1,
    "sStart": 239.99929999999998,
    "shortname": "u2",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 279.9991,
    "sLevel": 1,
    "sStart": 259.9992,
    "shortname": "u2",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 299.999,
    "sLevel": 1,
    "sStart": 279.9991,
    "shortname": "u2",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 319.99890000000005,
    "sLevel": 1,
    "sStart": 299.999,
    "shortname": "u2",
  },
  {
    "object": {
      "fontStyle": "normal",
      "id": 98,
      "isLabel": true,
      "numText": "2",
      "score": 0,
      "typeText": "u",
    },
    "sEnd": 359.9988000000001,
    "sLevel": 1,
    "sStart": 319.99890000000005,
    "shortname": "u2",
  },
  {
    "object": {
      "id": 103,
    },
    "sEnd": 40,
    "sLevel": 0,
    "sStart": 0,
    "shortname": "t1",
  },
  {
    "object": {
      "id": 107,
    },
    "sEnd": 80,
    "sLevel": 0,
    "sStart": 40,
    "shortname": "t2",
  },
  {
    "object": {
      "id": 111,
    },
    "sEnd": 120,
    "sLevel": 0,
    "sStart": 80,
    "shortname": "t3",
  },
  {
    "object": {
      "id": 117,
    },
    "sEnd": 180,
    "sLevel": 0,
    "sStart": 120,
    "shortname": "t4",
  },
  {
    "object": {
      "id": 121,
    },
    "sEnd": 220,
    "sLevel": 0,
    "sStart": 180,
    "shortname": "t5",
  },
  {
    "object": {
      "id": 135,
    },
    "sEnd": 320,
    "sLevel": 0,
    "sStart": 220,
    "shortname": "t6",
  },
  {
    "object": {
      "id": 133,
    },
    "sEnd": 350,
    "sLevel": 0,
    "sStart": 320,
    "shortname": "t7",
  },
  {
    "object": {
      "id": 134,
    },
    "sEnd": 359.9999,
    "sLevel": 0,
    "sStart": 350,
    "shortname": "t7",
  },
]
`;

exports[`calc sectors for one level cmkd > result is equal to snapshot 1`] = `
[
  {
    "object": {
      "id": 103,
    },
    "sEnd": 40,
    "sLevel": 0,
    "sStart": 0,
    "shortname": "t1",
  },
  {
    "object": {
      "id": 107,
    },
    "sEnd": 80,
    "sLevel": 0,
    "sStart": 40,
    "shortname": "t2",
  },
  {
    "object": {
      "id": 111,
    },
    "sEnd": 120,
    "sLevel": 0,
    "sStart": 80,
    "shortname": "t3",
  },
  {
    "object": {
      "id": 117,
    },
    "sEnd": 180,
    "sLevel": 0,
    "sStart": 120,
    "shortname": "t4",
  },
  {
    "object": {
      "id": 121,
    },
    "sEnd": 220,
    "sLevel": 0,
    "sStart": 180,
    "shortname": "t5",
  },
  {
    "object": {
      "id": 135,
    },
    "sEnd": 320,
    "sLevel": 0,
    "sStart": 220,
    "shortname": "t6",
  },
  {
    "object": {
      "id": 133,
    },
    "sEnd": 350,
    "sLevel": 0,
    "sStart": 320,
    "shortname": "t7",
  },
  {
    "object": {
      "id": 134,
    },
    "sEnd": 359.9999,
    "sLevel": 0,
    "sStart": 350,
    "shortname": "t7",
  },
]
`;
